k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mass-ingress
spec:
  type: LoadBalancer
  clusterIP: 10.118.3.67
  selector:
    app: mass-envoy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
